增加layui管理后台的增删改查页面模板

--- a/src/main/resources/template/java/layui_controller_vo.vm
+++ b/src/main/resources/template/java/layui_controller_vo.vm
@@ -19,7 +19,11 @@ public class ${table.entityName}VO {
     public String[] genExportArray() {
         return new String[]{
             #foreach($column in $table.columns)
-            ${column.fieldName},
+                #if (${column.fieldName} == "id")
+                    ${column.fieldName}
+                #else
+                    ,${column.fieldName}
+                #end
             #end
             };
     }
