--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -12,7 +12,7 @@
 <div style="width:100%;height:100%;-webkit-overflow-scrolling:touch;overflow-x:scroll;overflow-y:scroll;position:absolute;z-index: 9999">
     <div class="layui-fluid">
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>${table.entityLowerCamel}管理</legend>
+            <legend>${table.remarks}管理</legend>
         </fieldset>
         <div class="row">
             <form class="layui-form" lay-filter="${table.entityLowerCamel}SearchForm-filter" id="${table.entityLowerCamel}SearchForm" name="${table.entityLowerCamel}SearchForm">
@@ -20,7 +20,7 @@
 
                     #foreach($column in $table.columns)
                     <div class="layui-inline">
-                        <label class="layui-form-label ">${column.fieldName}</label>
+                        <label class="layui-form-label ">${column.remarks}</label>
                         <div class="layui-input-block">
                             <input type="text" name="${column.fieldName}" id="${column.fieldName}" class="layui-input">
                         </div>
