--- a/src/main/resources/template/java/layui_service.vm
+++ b/src/main/resources/template/java/layui_service.vm
@@ -105,7 +105,14 @@ ${table.daoObjName} ${table.entityLowerCamel}Mapper;
 
     private void generateCriteria(${table.entityObjName} ${table.entityLowerCamel}, ${table.exampleObjName} example) {
         // TODO add more condition
-
+        ${table.exampleObjName}.Criteria criteria = example.createCriteria();
+#foreach($column in $table.columns)
+    #if (${column.searched} == "true")
+        if (StringUtils.isNotBlank(${table.entityLowerCamel}.${column.getterName}()) {
+            criteria.and${column.fieldNameUpperCamel}EqualTo}(${table.entityLowerCamel}.${column.getterName}());
+        }
+    #end
+#end
         //========================
     }
 
