--- a/src/main/resources/layout/table_columns_editor.fxml
+++ b/src/main/resources/layout/table_columns_editor.fxml
@@ -21,6 +21,7 @@
     <TableView fx:id="table_view" editable="true" prefHeight="660.0" prefWidth="922.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
         <columns>
             <TableColumn fx:id="c_checked" text="%ui.customizeColumns.column.checked" />
+            <TableColumn fx:id="c_searched" text="searched" />
             <TableColumn fx:id="c_column_name" prefWidth="165.0" text="%ui.customizeColumns.column.name" />
             <TableColumn fx:id="c_remarks" prefWidth="176.0" text="COMMENTS" />
             <TableColumn fx:id="c_jdbc_type" prefWidth="161.0" text="%ui.customizeColumns.column.jdbcType" />
