可以展现数据库字段是否为空的配置，并在生成的时候把该配置传输到模板里

--- a/src/main/resources/layout/table_columns_editor.fxml
+++ b/src/main/resources/layout/table_columns_editor.fxml
@@ -22,6 +22,7 @@
         <columns>
             <TableColumn fx:id="c_checked" text="%ui.customizeColumns.column.checked" />
             <TableColumn fx:id="c_searched" text="searched" />
+            <TableColumn fx:id="c_required" text="required" />
             <TableColumn fx:id="c_column_name" prefWidth="165.0" text="%ui.customizeColumns.column.name" />
             <TableColumn fx:id="c_remarks" prefWidth="176.0" text="COMMENTS" />
             <TableColumn fx:id="c_jdbc_type" prefWidth="161.0" text="%ui.customizeColumns.column.jdbcType" />
