--- a/src/main/resources/layout/table_columns_editor.fxml
+++ b/src/main/resources/layout/table_columns_editor.fxml
@@ -9,7 +9,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ChoiceBox?>
 
+
+<?import javafx.collections.FXCollections?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="961.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spawpaw.mybatis.generator.gui.controller.TableColumnEditorController">
     <HBox alignment="CENTER_LEFT" minHeight="56.0">
         <Label text="%ui.customizeColumns.prompt">
@@ -23,6 +26,7 @@
             <TableColumn fx:id="c_checked" text="%ui.customizeColumns.column.checked" />
             <TableColumn fx:id="c_searched" text="searched" />
             <TableColumn fx:id="c_required" text="required" />
+            <TableColumn fx:id="c_page_type" text="PageType" />
             <TableColumn fx:id="c_column_name" prefWidth="165.0" text="%ui.customizeColumns.column.name" />
             <TableColumn fx:id="c_remarks" prefWidth="176.0" text="COMMENTS" />
             <TableColumn fx:id="c_jdbc_type" prefWidth="161.0" text="%ui.customizeColumns.column.jdbcType" />
