--- a/src/main/resources/template/html/layui_add.vm
+++ b/src/main/resources/template/html/layui_add.vm
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="../../../layui/css/layui.css">
+    <link rel="stylesheet" href="../../../css/main.css">
     <script type="text/javascript" src="../../../layui/layui.js" charset="utf-8"></script>
 </head>
 <body>
@@ -18,14 +19,17 @@
 
         #else
         <div class="layui-form-item">
+            #if (${column.required} == "true")
+            <label class="layui-form-label required">${column.remarks}</label>
+            <div class="layui-input-block">
+                <input type="text" lay-verify="required" name="${column.fieldName}" autocomplete="off" class="layui-input">
+            </div>
+            #else
             <label class="layui-form-label">${column.remarks}</label>
             <div class="layui-input-block">
-                #if (${column.required} == "true")
-                    <input type="text" lay-verify="required" name="${column.fieldName}" autocomplete="off" class="layui-input">
-                #else
-                    <input type="text" name="${column.fieldName}" autocomplete="off" class="layui-input">
-                #end
+                <input type="text" name="${column.fieldName}" autocomplete="off" class="layui-input">
             </div>
+            #end
         </div>
         #end
     #end
