--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -112,7 +112,7 @@
                 #if (${column.fieldName} == "id")
                     , {field: 'id', title: '主键', sort:true, align: 'lef',event: 'showDetail'}
                 #else
-                    , {field: '${column.fieldName}', title: '${column.fieldName}',sort:true, align: 'left'}
+                    , {field: '${column.fieldName}', title: '${column.remarks}',sort:true, align: 'left'}
                 #end
             #end
                 , {title: '操作', toolbar: '#${table.entityLowerCamel}ListActionBar', width: 350}
@@ -167,7 +167,7 @@
                     var id = obj.data.id;
                     layer.open({
                         type: 2,
-                        title: '编辑',
+                        title: '查询详情',
                         skin: 'layui-layer-rim', //加上边框
                         area: ['700px', '700px'], //宽高
                         content: '${table.entityLowerCamel}Detail.html?id=' + id
