layui页面模板支持radio元素的生成

--- a/src/main/resources/template/html/layui_add.vm
+++ b/src/main/resources/template/html/layui_add.vm
@@ -24,12 +24,24 @@
             #if (${column.required} == "true")
             <label class="layui-form-label required">${column.remarks}</label>
             <div class="layui-input-block">
+                #if (${column.pageType} == "radio")
+                    #foreach($optionItem in $column.valueSet)
+                        <input type="radio" name="${column.fieldName}" value="${optionItem}" title="${optionItem}">
+                    #end
+                #else
                 <input type="text" lay-verify="required" name="${column.fieldName}" autocomplete="off" class="layui-input">
+                #end
             </div>
             #else
             <label class="layui-form-label">${column.remarks}</label>
             <div class="layui-input-block">
+                #if (${column.pageType} == "radio")
+                    #foreach($optionItem in $column.valueSet)
+                        <input type="radio" name="${column.fieldName}" value="${optionItem}" title="${optionItem}">
+                    #end
+                #else
                 <input type="text" name="${column.fieldName}" autocomplete="off" class="layui-input">
+                #end
             </div>
             #end
         </div>
