--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -145,7 +145,7 @@
                         title: '添加',
                         skin: 'layui-layer-rim', //加上边框
                         area: ['700px', '700px'], //宽高
-                        content: '${table.entityLowerCamel}Add.html'
+                        content: '${table.entityLowerCamel}Add.html'+new Date().getTime()
                     });
                     break;
                 case 'refresh':
@@ -191,7 +191,7 @@
                         title: '编辑',
                         skin: 'layui-layer-rim', //加上边框
                         area: ['700px', '700px'], //宽高
-                        content: '${table.entityLowerCamel}Edit.html?id=' + id
+                        content: '${table.entityLowerCamel}Edit.html?id=' + id+"&rdn="+new Date().getTime()
                     });
                     break;
                 case 'del':
