--- a/src/main/resources/template/html/layui_edit.vm
+++ b/src/main/resources/template/html/layui_edit.vm
@@ -61,16 +61,8 @@
     </div>
 </form>
 </body>
+<script type="text/javascript" src="/js/system.js" charset="utf-8"></script>
 <script>
-    function getParam(paramName) {
-        paramValue = "", isFound = !1;
-        if (this.location.search.indexOf("?") == 0 && this.location.search.indexOf("=") > 1) {
-            arrSource = unescape(this.location.search).substring(1, this.location.search.length).split("&"), i = 0;
-            while (i < arrSource.length && !isFound) arrSource[i].indexOf("=") > 0 && arrSource[i].split("=")[0].toLowerCase() == paramName.toLowerCase() && (paramValue = arrSource[i].split("=")[1], isFound = !0), i++
-        }
-        return paramValue == "" && (paramValue = null), paramValue
-    }
-
     layui.use(['form', 'layedit'], function () {
         var form = layui.form
                 , layer = layui.layer
@@ -101,7 +93,7 @@
             });
             return false;
         });
-        var id = getParam('id');
+        var id = sys_getParam('id');
         $.ajax({
             url: '../../../api/${table.entityLowerCamel}/queryById/' + id,
             type: 'get',
