--- a/src/main/resources/template/html/layui_add.vm
+++ b/src/main/resources/template/html/layui_add.vm
@@ -28,8 +28,15 @@
                     #foreach($optionItem in $column.valueSet)
                         <input type="radio" name="${column.fieldName}" value="${optionItem}" title="${optionItem}">
                     #end
+                #elseif(${column.pageType} == "select")
+                    <select name="${column.fieldName}" lay-verify="">
+                        <option value=""></option>
+                        #foreach($optionItem in $column.valueSet)
+                            <option value="${optionItem}">${optionItem}</option>
+                        #end
+                    </select>
                 #else
-                <input type="text" lay-verify="required" name="${column.fieldName}" autocomplete="off" class="layui-input">
+                <input type="${column.pageType}" lay-verify="required" name="${column.fieldName}" autocomplete="off" class="layui-input">
                 #end
             </div>
             #else
@@ -39,8 +46,15 @@
                     #foreach($optionItem in $column.valueSet)
                         <input type="radio" name="${column.fieldName}" value="${optionItem}" title="${optionItem}">
                     #end
+                #elseif(${column.pageType} == "select")
+                    <select name="${column.fieldName}" lay-verify="">
+                        <option value=""></option>
+                        #foreach($optionItem in $column.valueSet)
+                            <option value="${optionItem}">${optionItem}</option>
+                        #end
+                    </select>
                 #else
-                <input type="text" name="${column.fieldName}" autocomplete="off" class="layui-input">
+                <input type="${column.pageType}" name="${column.fieldName}" autocomplete="off" class="layui-input">
                 #end
             </div>
             #end
@@ -83,6 +97,16 @@
                 }
             });
             return false;
+        });
+        var active = {
+            cancelEdit: function () {
+                var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+                parent.layer.close(index); //再执行关闭
+            }
+        }
+        $('.layui-btn').on('click', function () {
+            var type = $(this).data('type');
+            active[type] ? active[type].call(this) : '';
         });
     });
 
