--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -37,6 +37,13 @@
                                     <option value="${optionItem}">${optionItem}</option>
                                     #end
                                 </select>
+                            #elseif(${column.pageType} == "select")
+                                <select name="${column.fieldName}" lay-verify="">
+                                    <option value=""></option>
+                                    #foreach($optionItem in $column.valueSet)
+                                        <option value="${optionItem}">${optionItem}</option>
+                                    #end
+                                </select>
                             #else
                                 <input type="text" name="${column.fieldName}" id="${column.fieldName}" class="layui-input">
                             #end
@@ -127,7 +134,7 @@
                 #else
                 #end
             #end
-                , {title: '操作', toolbar: '#${table.entityLowerCamel}ListActionBar', width: 200}
+                , {title: '操作', toolbar: '#${table.entityLowerCamel}ListActionBar', width: 300}
             ]]
             , page: true
             , done: function (res) {
@@ -147,7 +154,7 @@
                         skin: 'layui-layer-rim', //加上边框
                         area: ['700px', '700px'], //宽高
                         maxmin: true,
-                        content: '${table.entityLowerCamel}Add.html'+new Date().getTime()
+                        content: '${table.entityLowerCamel}Add.html?rdn='+new Date().getTime()
                     });
                     break;
                 case 'refresh':
