--- a/src/main/resources/template/html/layui_add.vm
+++ b/src/main/resources/template/html/layui_add.vm
@@ -64,11 +64,12 @@
     <div class="layui-form-item">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit="" lay-filter="${table.entityLowerCamel}Add-filter">立即提交</button>
-            <button type="button" class="layui-btn layui-btn-primary" data-type="cancelEdit">取消</button>
+            <button type="button" class="layui-btn layui-btn-primary cancelAdd">取消</button>
         </div>
     </div>
 </form>
 </body>
+<script type="text/javascript" src="/js/system.js" charset="utf-8"></script>
 <script>
     var action = "../../../api/${table.entityLowerCamel}/add";
     layui.use('form', function () {
@@ -97,16 +98,6 @@
                 }
             });
             return false;
-        });
-        var active = {
-            cancelEdit: function () {
-                var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
-                parent.layer.close(index); //再执行关闭
-            }
-        }
-        $('.layui-btn').on('click', function () {
-            var type = $(this).data('type');
-            active[type] ? active[type].call(this) : '';
         });
     });
 
