可以生成带搜索框的select和在列表页面可以格式化日期

--- a/src/main/resources/template/html/layui_add.vm
+++ b/src/main/resources/template/html/layui_add.vm
@@ -30,7 +30,14 @@
                     #end
                 #elseif(${column.pageType} == "select")
                     <select name="${column.fieldName}" lay-verify="">
-                        <option value=""></option>
+                        <option value="">--请选择--</option>
+                        #foreach($optionItem in $column.valueSet)
+                            <option value="${optionItem}">${optionItem}</option>
+                        #end
+                    </select>
+                #elseif(${column.pageType} == "select-search")
+                    <select name="${column.fieldName}" lay-verify="" lay-search>
+                        <option value="">--请选择--</option>
                         #foreach($optionItem in $column.valueSet)
                             <option value="${optionItem}">${optionItem}</option>
                         #end
