--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -130,7 +130,11 @@
                 #if (${column.fieldName} == "id")
                     , {field: 'id', title: '主键', sort:true, align: 'lef',event: 'showDetail'}
                 #elseif (${column.showInList} == "true")
+                    #if(${column.whoColumn} == "true" && $column.fieldType.indexOf('Date') != -1)
+                    , {field: '${column.fieldName}', title: '${column.remarks}',sort:true, align: 'left',templet : '<div>{{!d.${column.fieldName}? "" : layui.util.toDateString(d.${column.fieldName}, "yyyy-MM-dd HH:mm:ss")}}</div>'}
+                    #else
                     , {field: '${column.fieldName}', title: '${column.remarks}',sort:true, align: 'left'}
+                    #end
                 #else
                 #end
             #end
