--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -44,6 +44,8 @@
                                         <option value="${optionItem}">${optionItem}</option>
                                     #end
                                 </select>
+                            #elseif(${column.pageType} == "select-dict")
+                                <select name="${column.fieldName}" lay-verify="" data-type="sysDict" data-title="$column.valueSet"></select>
                             #else
                                 <input type="text" name="${column.fieldName}" id="${column.fieldName}" class="layui-input">
                             #end
@@ -132,6 +134,8 @@
                 #elseif (${column.showInList} == "true")
                     #if(${column.whoColumn} == "true" && $column.fieldType.indexOf('Date') != -1)
                     , {field: '${column.fieldName}', title: '${column.remarks}',sort:true, align: 'left',templet : '<div>{{!d.${column.fieldName}? "" : layui.util.toDateString(d.${column.fieldName}, "yyyy-MM-dd HH:mm:ss")}}</div>'}
+                    #elseif(${column.pageType} == "select-dict")
+                    , {field: '${column.fieldName}', title: '${column.remarks}', sort: true, align: 'left', templet:"<div>{{sys_getDictValue('${column.valueSetString}',d.${column.fieldName})}}</div>"}
                     #else
                     , {field: '${column.fieldName}', title: '${column.remarks}',sort:true, align: 'left'}
                     #end
