--- a/src/main/resources/template/html/layui_edit.vm
+++ b/src/main/resources/template/html/layui_edit.vm
@@ -79,7 +79,7 @@
     <div class="layui-form-item">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit="" lay-filter="${table.entityLowerCamel}Edit-filter">立即提交</button>
-            <button type="button" class="layui-btn layui-btn-primary" data-type="cancelEdit">取消</button>
+            <button type="button" class="layui-btn layui-btn-primary cancelEdit">取消</button>
         </div>
     </div>
 </form>
@@ -92,27 +92,13 @@
                 , $ = layui.$
         //监听提交
         form.on('submit(${table.entityLowerCamel}Edit-filter)', function (data) {
-            var formData = JSON.stringify(data.field);
-            $.ajax({
-                url: '../../../api/${table.entityLowerCamel}/update',
-                type: 'post',
-                contentType: "application/json; charset=utf-8",
-                dataTye: 'json',
-                data: formData,
-                success: function (data) {
-                    if (data.code == 0) {
-                        layer.msg("修改成功",{time: 1000},function (data) {
-                            var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
-                            parent.layer.close(index);
-                            parent.$('#btnRefresh').click();
-                        });
-                    } else {
-                        if (data != '' && data.msg.startsWith('Per')) {
-                            parent.window.location.href = '../../login.html';
-                        }
-                        layer.msg(data.msg);
-                    }
-                }
+            var jsonData = JSON.stringify(data.field);
+            sys_doAjaxPostWithJSON('/api/${table.entityLowerCamel}/update',jsonData,function (data) {
+                layer.msg("修改成功", {time: 1000}, function (data) {
+                    var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+                    parent.layer.close(index);
+                    parent.$('#btnRefresh').click();
+                });
             });
             return false;
         });
@@ -122,12 +108,8 @@
             #end
         #end
         var id = sys_getParam('id');
-        $.ajax({
-            url: '../../../api/${table.entityLowerCamel}/queryById/' + id,
-            type: 'get',
-            dataTye: 'json',
-            success: function (data) {
-                var record = data.data;
+        var getDataUrl = '/api/${table.entityLowerCamel}/queryById/' + id
+        sys_doAjaxGet(getDataUrl, function(record){
                 //表单初始赋值
                 form.val('${table.entityLowerCamel}Edit-filter', {
                 #foreach($column in $table.columns)
@@ -137,19 +119,7 @@
                         , "${column.fieldName}": record.${column.fieldName}
                     #end
                 #end
-                })
-            }
-        });
-
-        var active = {
-            cancelEdit: function () {
-                var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
-                parent.layer.close(index); //再执行关闭
-            }
-        }
-        $('.layui-btn').on('click', function () {
-            var type = $(this).data('type');
-            active[type] ? active[type].call(this) : '';
+                });
         });
     });
 </script>
