--- a/src/main/resources/template/html/layui_list.vm
+++ b/src/main/resources/template/html/layui_list.vm
@@ -161,7 +161,7 @@
                         type: 2,
                         title: '添加',
                         skin: 'layui-layer-rim', //加上边框
-                        area: ['700px', '700px'], //宽高
+                        area: ['70%', '90%'], //宽高
                         maxmin: true,
                         content: '${table.entityLowerCamel}Add.html?rdn='+new Date().getTime()
                     });
@@ -198,7 +198,7 @@
                         type: 2,
                         title: '查询详情',
                         skin: 'layui-layer-rim', //加上边框
-                        area: ['700px', '700px'], //宽高
+                        area: ['70%', '90%'], //宽高
                         maxmin: true,
                         content: '${table.entityLowerCamel}Detail.html?id=' + id+'&rnd='+new Date().getTime()
                     });
@@ -209,7 +209,7 @@
                         type: 2,
                         title: '编辑',
                         skin: 'layui-layer-rim', //加上边框
-                        area: ['700px', '700px'], //宽高
+                        area: ['70%', '90%'], //宽高
                         maxmin: true,
                         content: '${table.entityLowerCamel}Edit.html?id=' + id+"&rdn="+new Date().getTime()
                     });
