support showInAdd:Edit feature

--- a/src/main/resources/template/html/layui_add.vm
+++ b/src/main/resources/template/html/layui_add.vm
@@ -19,6 +19,8 @@
 
         #elseif (${column.whoColumn} == "true")
 
+        #elseif (${column.showInAdd} == "false")
+
         #else
         <div class="layui-form-item">
             #if (${column.required} == "true")
