--- a/src/main/resources/template/html/layui_edit.vm
+++ b/src/main/resources/template/html/layui_edit.vm
@@ -19,6 +19,7 @@
             <input type="hidden" id="id" name="id">
         #elseif (${column.whoColumn} == "true")
         #elseif (${column.editable} == "false")
+        #elseif (${column.showInAdd} == "false")
         <div class="layui-form-item">
         <label class="layui-form-label">${column.remarks}</label>
         <div class="layui-input-block">
